# EcoFOCIpy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  FINAL_COMPLIANCE_SUMMARY.md  HISTORY.rst  LICENSE  README.md  STANDARDS_IMPLEMENTATION.md  WishList.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: codeql-analysis.yml  packagetest.yaml  superlinter.yml  todo.yml  todos.yml
ci/: requirements.txt  requirements_dev.txt
docs/: API_QUICK_REFERENCE.md  COMPLIANCE_REPORT.md  INDEX.md  LINTING_GUIDE.md  MODULE_REFERENCE.md  TROUBLESHOOTING.md
examples/: 16bsm2a_wpak_0000m.nc  example.txt  foci_ctd_process_oneprofile.py  mtrduino_process.py  sbe16_process.py  sbe37_process.py  sbe39_process.py  sbe56_process.py  wpak_process.py
notebooks/: 01_Mooring_Data_Processing.ipynb  02_CTD_Cast_Analysis.ipynb  03_ADCP_Processing.ipynb  04_Quality_Control.ipynb  05_NetCDF_Export.ipynb  1 General Guide and Instructions.ipynb  16bsm2a_s37_0000m.nc  16bsm2a_s39_0000m.nc  2 Quick General Data Flow Walkthrough.ipynb  3 Quick Guide to EcoFOCI Derived Products.ipynb  EcoFOCIpy_1d_filter_example.ipynb  EcoFOCIpy_22ckp2a_suna_647.ipynb  EcoFOCIpy_ERDDAP_CTD_Retrieval.ipynb  EcoFOCIpy_adcp_example.ipynb  EcoFOCIpy_cruisemaps_example.ipynb  EcoFOCIpy_isus_example.ipynb  EcoFOCIpy_sbe16_example.ipynb  EcoFOCIpy_sbe37_example.ipynb  EcoFOCIpy_sbe39_example.ipynb  EcoFOCIpy_sbe56_example.ipynb  EcoFOCIpy_sbe_ctd_btlfile_example.ipynb  EcoFOCIpy_sbe_ctd_btlfile_example_simple.ipynb  EcoFOCIpy_sbe_ctd_example.ipynb  EcoFOCIpy_suna_example_v3.ipynb  EcoFOCIpy_wetlabs1channel_example.ipynb  EcoFOCIpy_wetlabs2channel_example.ipynb  EcoFOCIpy_wetlabs3channel_example.ipynb  mpl_plot_settings.py  test.nc
notebooks/output/: DY1805.geo.json
src/: _version.py  tests.py
src/EcoFOCIpy/: __init__.py  tests.py
src/EcoFOCIpy/epic/: EPIC_timeconvert.py
src/EcoFOCIpy/io/: adcp_parser.py  adcp_parser_gemini.py  erddap.py  mtr_parser.py  ncCFsave.py  nitrates_parser.py  prawler_parser.py  prooceanus_parser.py  rbr_parser.py  rcm_parser.py  sbe_ctd_parser.py  sbe_parser.py  wetlabs_parser.py  wpak_parser.py
src/EcoFOCIpy/math/: aandopt_oxy_corr.py  cleaning.py  geotools.py  haversine.py  (+2 more)
staticdata/: cruise_example.yaml  institutional_meta_example.yaml  institutional_meta_example_ctd.yaml  mooring_adcp_example.yaml  mooring_example.yaml  qcflags.yaml  wpak_test.txt
staticdata/example_data/: ecobbfl2w_sample.txt  ecoflntus_sample.txt  ecoflsb_sample.txt  sbe16_sample1.cnv  sbe26_sample.tid  sbe37_wpress.cnv  sbe39_wopress.cnv  sbe39_wpress.cnv  sbe56_timeJ.cnv
staticdata/instr_metaconfig/: FOCI_oneoxy_CTD.yaml  FOCI_standard_CTD.yaml  adcp.yaml  ecofluor.yaml  ecopar_cf.yaml  metoce_cf.yaml  mtr_cf.yaml  puf_cf.yaml  rbr_cf.yaml  rcm_cf.yaml  rcmsg_cf.yaml  sbe16_cf.yaml  sbe26_cf.yaml  sbe37_cf.yaml  sbe39_cf.yaml  sbe56_cf.yaml  suna_cf.yaml  tdgp_cf.yaml  telos_wx_cf.yaml  wxt_cf.yaml
tests/: QC_TEST_COVERAGE.md  TESTING_GUIDE.md  test_epic.py  test_geotools.py  test_haversine.py  test_lanzcos.py  test_math.py  test_qc.py
tests/io/: test_adcp_parser.py  test_prooceanus_parser.py  test_wetlabs_parser.py  test_wpak_parser.py
tests/math/: test_geotools.py  test_lanzcos.py
tests/qc/: test_ctd_qc
tools/: SQL2GEOJSON_ctds.py  SQL2GEOJSON_moorings.py  cruise_config_creator.py  find_closest_ctd.py  mooring_config_creator.py
tools/_dbconfig/: EcoFOCI_db_io.py  db_config_mooring.yaml
tools/_secret/: db_config_cruises.yaml
(+36 files in other folders)
