[metadata]
name = EcoFOCIpy
description = Collection of tools for reading, visualizing and performing calculations with EcoFOCI data.
long_description = file: README.md
long_description_content_type = text/markdown
author = Shaun Bell
author_email = shaun.bell@noaa.gov
maintainer = Shaun Bell
maintainer_email = shaun.bell@noaa.gov
license = MIT
license_file = LICENSE
platform = any
keywords = oceanography, pmel, instrumentation
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Oceanography
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
url = https://www.ecofoci.noaa.gov/
project_urls =
    Documentation = https://github.com/shaunwbell/EcoFOCIpy/
    Release Notes = https://github.com/shaunwbell/EcoFOCIpy/releases
    Bug Tracker = https://github.com/shaunwbell/EcoFOCIpy/issues
    Source Code = https://github.com/shaunwbell/EcoFOCIpy

[options]
zip_safe = True
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
tests_require = pytest
python_requires = >=3.8
install_requires = 
    matplotlib>=3.4.1
    numpy>=1.20.2
    pandas>=1.2.4
    xlrd>=1.0.0
    netcdf4>=1.5.6
    cftime>=1.4.1
    erddapy>=1.0.0
    ctd>=1.1.1
    seawater>=3.3.4

[options.packages.find]
where = src

[pycodestyle]
ignore = W503
max-line-length = 95

[flake8]
max-line-length = 95
application-import-names = ecofocipy
import-order-style = google
